--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
 
 <body>
     <div class="bg">
-        <img class="star1 move" src="img/star1.svg">
+        <img class="star1 flow" src="img/star1.svg">
 
-        <img class="star2" src="img/star2.svg">
+        <img class="star2 flow2" src="img/star2.svg">
 
-        <img class="star3" src="img/star3.svg">
+        <img class="star3 flow" src="img/star3.svg">
 
-        <img class="star4" src="img/star4.svg">
+        <img class="star4 flow2" src="img/star4.svg">
 
-        <img class="star5" src="img/star5.svg">
+        <img class="star5 flow" src="img/star5.svg">
 
         <img class="light" src="img/light.svg">
 
         <img id="hero" class="maja top-margin-15vh" src="img/maja.svg">
+        <img id="glowing" class="glow top-margin-15vh" src="img/glow.png">
 
         <img class="foreground" src="img/fgpng.png">
 
 
     </div>
         <div class="buttons">
-            <button id="jump">Jump</button>
-            <button id="rotate">Rotate</button>
-            <button id="run">Run</button>
-            <button id="run">Run</button>
-            <button id="run">Run</button>
-            <button id="run">Run</button>
+            <button id="move">Move</button>
+            <button id="moveto30">Move to 30</button>
+            <button id="onejump">One jump</button>
+            <button id="jumping">Jumping</button>
+            <button id="fade">Fade</button>
+            <button id="glowbtn">Glow</button>
+            <button id="falldownbtn">Fall down</button>
+            <button id="shakebtn">Shake</button>
+            <button id="moveto0btn">Move to 0</button>
+            <button id="speak">Speak</button>
         </div>
   <script src="js/myscript.js"></script>
 </body>
