--- a/index.html
+++ b/index.html
@@ -28,18 +28,25 @@
 
 
     </div>
-        <div class="buttons">
-            <button id="move">Move</button>
-            <button id="moveto30">Move to 30</button>
-            <button id="onejump">One jump</button>
-            <button id="jumping">Jumping</button>
-            <button id="fade">Fade</button>
-            <button id="glowbtn">Glow</button>
-            <button id="falldownbtn">Fall down</button>
-            <button id="shakebtn">Shake</button>
-            <button id="moveto0btn">Move to 0</button>
-            <button id="speak">Speak</button>
-        </div>
+
+    <audio id="heroicmusic" preload="auto">
+        <source src="audio/happy-music.wav">
+    </audio>
+
+    <div class="buttons">
+        <button id="move">Move</button>
+        <button id="moveto30">Move to 30</button>
+        <button id="onejump">One jump</button>
+        <button id="jumping">Jumping</button>
+        <button id="fade">Fade</button>
+        <button id="glowbtn">Glow</button>
+        <button id="falldownbtn">Fall down</button>
+        <button id="shakebtn">Shake</button>
+        <button id="moveto0btn">Move to 0</button>
+        <button id="speak">Speak</button>
+        <button id="playmusicscale">Play music + scale</button>
+        <button id="playmusicfade">Play music + fade</button>
+    </div>
   <script src="js/myscript.js"></script>
 </body>
 </html>
